WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269244
[UnifiedPDF] Crash when scrolling after a swipe back from an external link follow
https://bugs.webkit.org/show_bug.cgi?id=269244
Summary
[UnifiedPDF] Crash when scrolling after a swipe back from an external link fo...
Abrar Rahman Protyasha
Reported
2024-02-12 15:36:10 PST
If we click to follow an external link, then swiping back and scrolling on the original PDF document causes a crash. Here is a snippet of the crash log. ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 JavaScriptCore 0x12c6a2f18 WTFCrash + 24 (Assertions.cpp:351) 1 WebCore 0x14d6ff624 WTFCrashWithInfo(int, char const*, char const*, int) + 36 (Assertions.h:780) 2 WebCore 0x14f321f80 WebCore::LayerRepresentation::operator CALayer*() const + 128 (ScrollingStateNode.h:106) 3 WebCore 0x14f5851e0 WebCore::ScrollingTreePluginScrollingNodeMac::repositionScrollingLayers() + 48 (ScrollingTreePluginScrollingNodeMac.mm:103) 4 WebCore 0x1528f59f8 WebCore::ScrollingTreeScrollingNode::applyLayerPositions() + 68 (ScrollingTreeScrollingNode.cpp:392) 5 WebCore 0x1528ddd88 WebCore::ScrollingTree::applyLayerPositionsRecursive(WebCore::ScrollingTreeNode&) + 76 (ScrollingTree.cpp:498) 6 WebCore 0x1528ddde4 WebCore::ScrollingTree::applyLayerPositionsRecursive(WebCore::ScrollingTreeNode&) + 168 (ScrollingTree.cpp:501) 7 WebCore 0x1528ddde4 WebCore::ScrollingTree::applyLayerPositionsRecursive(WebCore::ScrollingTreeNode&) + 168 (ScrollingTree.cpp:501) 8 WebCore 0x1528ddd2c WebCore::ScrollingTree::applyLayerPositionsInternal() + 176 (ScrollingTree.cpp:493) 9 WebCore 0x1528ddc68 WebCore::ScrollingTree::applyLayerPositions() + 96 (ScrollingTree.cpp:484) 10 WebCore 0x1528ddbf8 WebCore::ScrollingTree::applyLayerPositionsAfterCommit() + 92 (ScrollingTree.cpp:477) 11 WebKit 0x11527c49c WebKit::RemoteScrollingCoordinatorProxy::applyScrollingTreeLayerPositionsAfterCommit() + 56 (RemoteScrollingCoordinatorProxy.cpp:162) 12 WebKit 0x1149c6aa8 WebKit::RemoteScrollingCoordinatorProxyMac::applyScrollingTreeLayerPositionsAfterCommit() + 32 (RemoteScrollingCoordinatorProxyMac.mm:291) 13 WebKit 0x114992ec4 WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTreeTransaction(IPC::Connection&, WebKit::RemoteLayerTreeTransaction const&, WebKit::RemoteScrollingCoordinatorTransaction const&) + 2028 (RemoteLayerTreeDrawingAreaProxy.mm:305) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-12 15:36:24 PST
<
rdar://problem/122835175
>
Simon Fraser (smfr)
Comment 2
2024-02-20 18:38:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24854
EWS
Comment 3
2024-02-21 12:48:56 PST
Committed
275123@main
(a55bd5c3df1c): <
https://commits.webkit.org/275123@main
> Reviewed commits have been landed. Closing PR #24854 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug