Source/WebCore/plugins/PluginViewBase.h
@@ -65,6 +65,7 @@ public:
 
     virtual bool usesAsyncScrolling() const { return false; }
     virtual ScrollingNodeID scrollingNodeID() const { return { }; }
+    virtual void willAttachScrollingNode() { }
     virtual void didAttachScrollingNode() { }
 
 #if PLATFORM(COCOA)
