Source/WebCore/rendering/RenderEmbeddedObject.h
@@ -63,6 +63,7 @@ public:
 
     bool usesAsyncScrolling() const;
     ScrollingNodeID scrollingNodeID() const;
+    void willAttachScrollingNode();
     void didAttachScrollingNode();
 
 private:
